--- a/T.html
+++ b/T.html
@@ -53,8 +53,10 @@
 									<header class="major">
 										<h1>IQ퍼즐램프 만들기</h1>
 									</header>
+									<h3>IQ퍼즐램프의 원리</h3>
 									<p align="middle"><iframe width="853" height="480" style="text-align: center;" src="https://www.youtube.com/embed/L4aUACZXCuk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
-									<p>이론 설명, 이미지</p>
+									<h3>IQ퍼즐램프 만들기 </h3>
+									<p align="middle"><iframe width="853" height="480" src="https://www.youtube.com/embed/bJ1K_PAS74w" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 								</div>
 							</section>
 
