--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<script>
-			alert("수학체험 결과물을 2층 교무실 변재연선생님께 가져오는 학생에게는 소정의 선물을 드립니다.");
+			//alert("수학체험 결과물을 2층 교무실 변재연선생님께 가져오는 학생에게는 소정의 선물을 드립니다.");
 		</script>
 		<!-- Wrapper -->
 			<div id="wrapper">
